Fix title in admin menu bars not showing correctly.

--- a/Themes/ShepherdMain/Styles/theme.less
+++ b/Themes/ShepherdMain/Styles/theme.less
@@ -95,6 +95,10 @@ a:hover i.fs {
     line-height: 44px;
 }
 
+.navbar .zone-instance {
+    line-height: initial;
+}
+
 .loginstatus,
 .loginstatus > li {
     float: left;
